rm model_stan.pdf b/c not rendering properly

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -526,7 +526,7 @@
 
     The following code specifies the joint model framework used to estimate the interaction matrix described in the Methods. It can be copied into a text editor and saved with a .stan extension for use with STAN. 
 
-    \includepdf[pages=-]{../1.model/model_stan.pdf}
+    %\includepdf[pages=-]{../1.model/model_stan.pdf}
 
 
 \section{Supplementary Results}
